@@ -27,6 +27,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 - HDRP: lens presets include physical settings if physical camera
 - Regression Fix: Framing Transposer: ignore LookAt target.  Use Follow exclusively
 - Bugfix: PostProcessing extension was not handling standby update correctly when on Manager Vcams
+- Bugfix: PostProcessing extension was leaking a smallamounts of memory when scenes were unloaded
 - Bugfixes: (fogbugz 1193311, 1193307, 1192423, 1192414): disallow presets for vcams
 - Bugfix: In some heading modes, FreeLook was improperly modifying the axes when activated
 - Bugfix: Orbital transposer was improperly filtering the heading in TargetForward heading mode
